Adding baseline files for SI AAA theme

--- a/css/si_aaa.styles.css
+++ b/css/si_aaa.styles.css
@@ -1,5 +1,164 @@
-img, media {
-  max-width: 100%;
-}
+/* line 5, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline; }
 
-/* No files to import found in partials/components/**\/* */
+/* line 22, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+html {
+  line-height: 1; }
+
+/* line 24, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+ol, ul {
+  list-style: none; }
+
+/* line 26, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+/* line 28, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle; }
+
+/* line 30, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+q, blockquote {
+  quotes: none; }
+  /* line 103, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+  q:before, q:after, blockquote:before, blockquote:after {
+    content: "";
+    content: none; }
+
+/* line 32, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+a img {
+  border: none; }
+
+/* line 116, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+  display: block; }
+
+/* line 1, ../sass/base/_media.scss */
+img, media {
+  max-width: 100%; }
+
+/**
+ * $FONT-FACE
+ */
+@font-face {
+  font-family: "Scala";
+  font-weight: normal;
+  font-style: normal;
+  src: url('../fonts/Scala/2D778A_4_0.eot?1424896854') format("embedded-opentype");
+  src: url('../fonts/Scala/2D778A_4_0.eot?1424896854#iefix') format("embedded-opentype"), url('../fonts/Scala/2D778A_4_0.woff2?1424896856') format("woff2"), url('../fonts/Scala/2D778A_4_0.woff?1424896854') format("woff"), url('../fonts/Scala/2D778A_4_0.ttf?1424896854') format("truetype"); }
+@font-face {
+  font-family: "Scala";
+  font-weight: normal;
+  font-style: italic;
+  src: url('../fonts/Scala/2D778A_3_0.eot?1424896852') format("embedded-opentype");
+  src: url('../fonts/Scala/2D778A_3_0.eot?1424896852#iefix') format("embedded-opentype"), url('../fonts/Scala/2D778A_3_0.woff2?1424896854') format("woff2"), url('../fonts/Scala/2D778A_3_0.woff?1424896852') format("woff"), url('../fonts/Scala/2D778A_3_0.ttf?1424896852') format("truetype"); }
+@font-face {
+  font-family: "Scala";
+  font-weight: bold;
+  font-style: normal;
+  src: url('../fonts/Scala/2D778A_5_0.eot?1424896858') format("embedded-opentype");
+  src: url('../fonts/Scala/2D778A_5_0.eot?1424896858#iefix') format("embedded-opentype"), url('../fonts/Scala/2D778A_5_0.woff2?1424896860') format("woff2"), url('../fonts/Scala/2D778A_5_0.woff?1424896858') format("woff"), url('../fonts/Scala/2D778A_5_0.ttf?1424896858') format("truetype"); }
+@font-face {
+  font-family: "Scala";
+  font-weight: bold;
+  font-style: italic;
+  src: url('../fonts/Scala/2D778A_0_0.eot?1424896842') format("embedded-opentype");
+  src: url('../fonts/Scala/2D778A_0_0.eot?1424896842#iefix') format("embedded-opentype"), url('../fonts/Scala/2D778A_0_0.woff2?1424896844') format("woff2"), url('../fonts/Scala/2D778A_0_0.woff?1424896842') format("woff"), url('../fonts/Scala/2D778A_0_0.ttf?1424896842') format("truetype"); }
+@font-face {
+  font-family: "Scala Condensed";
+  font-weight: normal;
+  font-style: normal;
+  src: url('../fonts/Scala/2D778A_2_0.eot?1424896848') format("embedded-opentype");
+  src: url('../fonts/Scala/2D778A_2_0.eot?1424896848#iefix') format("embedded-opentype"), url('../fonts/Scala/2D778A_2_0.woff2?1424896850') format("woff2"), url('../fonts/Scala/2D778A_2_0.woff?1424896848') format("woff"), url('../fonts/Scala/2D778A_2_0.ttf?1424896848') format("truetype"); }
+@font-face {
+  font-family: "Scala Condensed";
+  font-weight: bold;
+  font-style: normal;
+  src: url('../fonts/Scala/2D778A_1_0.eot?1424896846') format("embedded-opentype");
+  src: url('../fonts/Scala/2D778A_1_0.eot?1424896846#iefix') format("embedded-opentype"), url('../fonts/Scala/2D778A_1_0.woff2?1424896846') format("woff2"), url('../fonts/Scala/2D778A_1_0.woff?1424896846') format("woff"), url('../fonts/Scala/2D778A_1_0.ttf?1424896844') format("truetype"); }
+@font-face {
+  font-family: "GT Walsheim";
+  font-weight: normal;
+  font-style: normal;
+  src: url('../fonts/GT-Walsheim/GT-Walsheim-Regular.eot?1409617492') format("embedded-opentype");
+  src: url('../fonts/GT-Walsheim/GT-Walsheim-Regular.eot?1409617492#iefix') format("embedded-opentype"), url('../fonts/GT-Walsheim/GT-Walsheim-Regular.woff?1409617492') format("woff"), url('../fonts/GT-Walsheim/GT-Walsheim-Regular.ttf?1409617492') format("truetype"), url('../fonts/GT-Walsheim/GT-Walsheim-Regular.svg?1409617492') format("svg"); }
+@font-face {
+  font-family: "GT Walsheim";
+  font-weight: normal;
+  font-style: italic;
+  src: url('../fonts/GT-Walsheim/GT-Walsheim-Regular-Oblique.eot?1409617490') format("embedded-opentype");
+  src: url('../fonts/GT-Walsheim/GT-Walsheim-Regular-Oblique.eot?1409617490#iefix') format("embedded-opentype"), url('../fonts/GT-Walsheim/GT-Walsheim-Regular-Oblique.woff?1409617490') format("woff"), url('../fonts/GT-Walsheim/GT-Walsheim-Regular-Oblique.ttf?1409617490') format("truetype"), url('../fonts/GT-Walsheim/GT-Walsheim-Regular-Oblique.svg?1409617490') format("svg"); }
+@font-face {
+  font-family: "GT Walsheim";
+  font-weight: bold;
+  font-style: normal;
+  src: url('../fonts/GT-Walsheim/GT-Walsheim-Bold.eot?1409617500') format("embedded-opentype");
+  src: url('../fonts/GT-Walsheim/GT-Walsheim-Bold.eot?1409617500#iefix') format("embedded-opentype"), url('../fonts/GT-Walsheim/GT-Walsheim-Bold.woff?1409617500') format("woff"), url('../fonts/GT-Walsheim/GT-Walsheim-Bold.ttf?1409617500') format("truetype"), url('../fonts/GT-Walsheim/GT-Walsheim-Bold.svg?1409617500') format("svg"); }
+@font-face {
+  font-family: "GT Walsheim";
+  font-weight: bold;
+  font-style: italic;
+  src: url('../fonts/GT-Walsheim/GT-Walsheim-Bold-Oblique.eot?1409617498') format("embedded-opentype");
+  src: url('../fonts/GT-Walsheim/GT-Walsheim-Bold-Oblique.eot?1409617498#iefix') format("embedded-opentype"), url('../fonts/GT-Walsheim/GT-Walsheim-Bold-Oblique.woff?1409617498') format("woff"), url('../fonts/GT-Walsheim/GT-Walsheim-Bold-Oblique.ttf?1409617498') format("truetype"), url('../fonts/GT-Walsheim/GT-Walsheim-Bold-Oblique.svg?1409617498') format("svg"); }
+/* line 106, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/_vertical_rhythm.scss */
+html {
+  font-size: 100%;
+  line-height: 1.5em; }
+
+/**
+ * $BASE-TYPOGRAPHY
+ */
+/* line 100, ../sass/base/_typography.scss */
+html {
+  font-family: "GT Walsheim", Helvetica, Arial, sans-serif;
+  color: #595959;
+  font-size: 14px;
+  font-size: 0.875rem;
+  line-height: 1.618; }
+
+/**
+ * $LINKS
+ */
+/* line 110, ../sass/base/_typography.scss */
+a {
+  color: #1668b3; }
+  /* line 18, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
+  a:visited {
+    color: #1668b3; }
+  /* line 21, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
+  a:focus {
+    color: #12395c; }
+  /* line 24, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
+  a:hover {
+    color: #12395c; }
+  /* line 27, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
+  a:active {
+    color: #e4621c; }
+
+/* line 114, ../sass/base/_typography.scss */
+h1, h2, h3, h4, h5, h6 {
+  font-family: "GT Walsheim", Helvetica, Arial, sans-serif;
+  color: #1668b3; }
+
+/*# sourceMappingURL=si_aaa.styles.css.map */
