--- a/sass/components/_tb_megamenu.scss
+++ b/sass/components/_tb_megamenu.scss
@@ -12,15 +12,19 @@
           background-image: none;
           border-left: 1px solid $light-blue;
           background-color: $mid-blue;
-          &:hover, &:focus {
+          &:focus, &:hover {
             text-decoration: underline;
+            background-color: $mid-blue;
           }
       }
-
+      &:first-child > a {
+        border-left: none;
+      }
+      &.dropdown.active > .dropdown-toggle,
       &.dropdown.open > .dropdown-toggle,
       &.dropdown.open.active > .dropdown-toggle,
-      &.dropdown.open.active > a:hover,
-      &.dropdown.open.active > a:focus {
+      &.dropdown.open.active > a:focus,
+      &.dropdown.open.active > a:hover {
         background-color: $mid-blue;
         color: $light-blue;
       }
@@ -37,44 +41,29 @@
   }
 }
 
-.l-region--header-preface-right nav {
-  float: right;
-  .menu {
-    > li {
-      color: #fff;
-      margin-right: 1em;
-      padding: 1em 0;
-     > a {
-        @extend %screen-reader;
-      }
-    }
-  }
-}
-
-.l-region--header .tb-megamenu {
-  background: none;
-  .nav {
-    > li {
-       > a,
-      &.active > a {
-        padding: 0 1em;
-        @include font-size(12px);
-        @include link-colors($light-blue);
-
-      }
-    }
-  }
-}
-
 .l-region--navigation .tb-megamenu {
   .nav {
     li {
       > a,
-       &.dropdown.open > .dropdown-toggle,
-      &.dropdown.open.active > .dropdown-toggle {
-         @include link-colors(#fff);
-         border: none;
-      }
+        &.active > a {
+          // Set ($normal, $hover, $active, $visited, $focus)
+           @include link-colors(#fff);
+            border-left: none;
+            &:focus, &:hover {
+              text-decoration: underline;
+              background-color: none;
+            }
+        }
+
+        &.dropdown.active > .dropdown-toggle,
+        &.dropdown.open > .dropdown-toggle,
+        &.dropdown.open.active > .dropdown-toggle,
+        &.dropdown.open.active > a:focus,
+        &.dropdown.open.active > a:hover {
+          background-color: none;
+          color: #fff;
+        }
+
     .dropdown-menu {
       background-color: #f6f6f6;
       @include box-shadow(rgba(black, .25) 1px 5px 5px);
