--- a/css/layouts/baseline/baseline.layout.css
+++ b/css/layouts/baseline/baseline.layout.css
@@ -4,23 +4,6 @@
  * Styling of the "laseline" layout demonstrating the Compass grid extension Susy
  * and building mobile first layouts.
  ******************************************************************************/
-/* line 1, ../../../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/toolkit-2.9.0/stylesheets/toolkit/_kickstart.scss */
-html {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-/* line 11, ../../../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/toolkit-2.9.0/stylesheets/toolkit/_kickstart.scss */
-*, *:before, *:after {
-  box-sizing: inherit; }
-
-/* line 15, ../../../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/toolkit-2.9.0/stylesheets/toolkit/_kickstart.scss */
-embed,
-img,
-object,
-video {
-  max-width: 100%;
-  height: auto; }
-
 /* line 24, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-container,
 .l-region--navigation {
@@ -35,7 +18,12 @@ video {
     display: block;
     clear: both; }
 
-/* line 31, ../../../sass/layouts/baseline/baseline.layout.scss */
+/* line 29, ../../../sass/layouts/baseline/baseline.layout.scss */
+.l-container {
+  overflow: hidden;
+  *zoom: 1; }
+
+/* line 33, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-region--highlighted,
 .l-region--help,
 .l-region--sidebar-first,
@@ -43,45 +31,45 @@ video {
   margin-bottom: 1em; }
 
 @media (min-width: 600px) {
-  /* line 39, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 41, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--header-preface-left {
     width: 48.93617%;
     float: left;
     margin-right: 2.12766%; }
 
-  /* line 42, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .l-region--header-preface-right {
+  /* line 44, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region-header-preface-right-wrapper {
     width: 48.93617%;
     float: right;
     margin-right: 0; }
 
-  /* line 45, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 47, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-branding {
     width: 31.91489%;
     float: left;
     margin-right: 2.12766%; }
 
-  /* line 48, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .l-region--header-wrapper {
+  /* line 50, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region--header {
     width: 65.95745%;
     float: right;
     margin-right: 0; }
-    /* line 50, ../../../sass/layouts/baseline/baseline.layout.scss */
-    .l-region--header-wrapper .l-region--header {
+    /* line 52, ../../../sass/layouts/baseline/baseline.layout.scss */
+    .l-region--header .l-region--header {
       float: right; }
 
-  /* line 55, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 57, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--navigation {
     margin-top: 1em; }
 
-  /* line 62, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 64, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-content,
   .has-sidebar-second .l-content,
   .has-two-sidebars .l-content {
     width: 65.95745%;
     float: left;
     margin-right: 2.12766%; }
-  /* line 65, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 67, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-region--sidebar-first,
   .has-sidebar-first .l-region--sidebar-second,
   .has-sidebar-second .l-region--sidebar-first,
@@ -91,13 +79,13 @@ video {
     width: 31.91489%;
     float: right;
     margin-right: 0; }
-  /* line 69, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 71, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-region--sidebar-second,
   .has-sidebar-second .l-region--sidebar-second,
   .has-two-sidebars .l-region--sidebar-second {
     clear: right; } }
 @media (min-width: 980px) {
-  /* line 76, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 78, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-container,
   .l-region--navigation {
     max-width: 80%;
@@ -110,69 +98,69 @@ video {
       display: block;
       clear: both; }
 
-  /* line 81, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 83, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--header-preface-left {
     width: 49.20635%;
     float: left;
     margin-right: 1.5873%; }
 
-  /* line 84, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .l-region--header-preface-right {
+  /* line 86, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region-header-preface-right-wrapper {
     width: 49.20635%;
     float: right;
     margin-right: 0; }
 
-  /* line 87, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 89, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-branding {
     width: 23.80952%;
     float: left;
     margin-right: 1.5873%; }
 
-  /* line 90, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .l-region--header-wrapper {
+  /* line 92, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region--header {
     width: 74.60317%;
     float: right;
     margin-right: 0; }
 
-  /* line 95, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 97, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-content {
     width: 74.60317%;
     float: right;
     margin-right: 0; }
-  /* line 98, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 100, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-region--sidebar-first {
     width: 23.80952%;
     float: left;
     margin-right: 1.5873%; }
 
-  /* line 103, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 105, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-second .l-content {
     width: 74.60317%;
     float: left;
     margin-right: 1.5873%; }
-  /* line 106, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 108, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-second .l-region--sidebar-second {
     width: 23.80952%;
     float: right;
     margin-right: 0;
     clear: none; }
 
-  /* line 113, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 115, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-two-sidebars .l-content {
     width: 49.20635%;
     float: left;
     margin-right: 1.5873%;
     margin-left: 25.39683%; }
-  /* line 117, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 119, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-two-sidebars .l-region--sidebar-first,
   .has-two-sidebars .l-region--sidebar-second {
     width: 23.80952%;
     float: left;
     margin-right: 1.5873%; }
-  /* line 121, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 123, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-two-sidebars .l-region--sidebar-first {
     margin-left: -76.19048%; }
-  /* line 124, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 126, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-two-sidebars .l-region--sidebar-second {
     float: right;
     margin-right: 0;
