--- a/sass/layouts/baseline/baseline.layout.scss
+++ b/sass/layouts/baseline/baseline.layout.scss
@@ -4,10 +4,11 @@
  * Styling of the "laseline" layout demonstrating the Compass grid extension Susy
  * and building mobile first layouts.
  ******************************************************************************/
-// Use 'border-box' for the box model.
-@import "toolkit/kickstart";
+@import "toolkit";
+@import "compass";
 @import "susy";
 @import "breakpoint";
+
 
 // Globbing from within sub-folders only works with relative paths.
 @import "../../variables/**/*";
@@ -20,13 +21,14 @@ $susy: (
  // debug:              (image:show),
 );
 
-
 .l-container,
 .l-region--navigation {
   @include container; // Define these elements as the grid containers.
   margin-bottom: $vert-spacing-unit;
 }
-
+.l-container {
+  @include clearfix;
+}
 
 .l-region--highlighted,
 .l-region--help,
@@ -39,13 +41,13 @@ $susy: (
   .l-region--header-preface-left  {
     @include span(6);
   }
-  .l-region--header-preface-right {
+  .l-region-header-preface-right-wrapper {
     @include span(6 last);
   }
   .l-branding {
     @include span(4);
   }
-  .l-region--header-wrapper {
+  .l-region--header {
     @include span(8 last);
     .l-region--header {
       float: right;
@@ -81,13 +83,13 @@ $susy: (
   .l-region--header-preface-left  {
     @include span(8);
   }
-  .l-region--header-preface-right  {
+  .l-region-header-preface-right-wrapper  {
     @include span(8 last);
   }
   .l-branding {
     @include span(4); // Span 6 out of 16 columns.
   }
-  .l-region--header-wrapper{
+  .l-region--header{
     @include span(12 last); // Span the last (omega) 10 columns of 16.
   }
 
