--- a/sass/abstractions/_accessibility.scss
+++ b/sass/abstractions/_accessibility.scss
@@ -1,9 +1,8 @@
 %screen-reader {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
 }
