--- a/sass/components/_misc.scss
+++ b/sass/components/_misc.scss
@@ -9,6 +9,20 @@
   font-weight: 600;
   letter-spacing: .8px;
   @include font-size(11px);
-  background-color: $mid-blue;
+  background-color: $blue;
   color: #fff;
+}
+
+.icon-only {
+  display: inline-block; /* Fix for clickability issue in WebKit */
+}
+
+.icon-list {
+  ul {
+    @extend %navigation-list;
+    > li {
+      margin-right: $horz-spacing-unit *  1.5;
+      padding: 1.1em 0;
+    }
+  }
 }
