--- a/sass/components/_tb_megamenu.scss
+++ b/sass/components/_tb_megamenu.scss
@@ -1,5 +1,5 @@
 // Global settings for all megamenu
-.tb-megamenu {
+.tb-megamenu, .tb-megamenu .nav-collapse {
   background: none;
   color: #fff;
   .nav {
@@ -10,11 +10,11 @@
          @include link-colors(#fff);
           padding: .5em 1em;
           background-image: none;
-          border-left: 1px solid $light-blue;
-          background-color: $mid-blue;
+          border: none;
+          background-color: none;
           &:focus, &:hover {
             text-decoration: underline;
-            background-color: $mid-blue;
+            background: none;
           }
       }
       &:first-child > a {
@@ -25,7 +25,7 @@
       &.dropdown.open.active > .dropdown-toggle,
       &.dropdown.open.active > a:focus,
       &.dropdown.open.active > a:hover {
-        background-color: $mid-blue;
+        background: none;
         color: $light-blue;
       }
 
@@ -36,7 +36,7 @@
     .mega-nav .mega-group > .mega-group-title,
     .dropdown-menu .mega-nav .mega-group > .mega-group-title,
     .dropdown-menu .active .mega-nav .mega-group > .mega-group-title {
-      color: $mid-blue;
+      color: $blue;
     }
   }
 }
@@ -47,12 +47,17 @@
       > a,
         &.active > a {
           // Set ($normal, $hover, $active, $visited, $focus)
-           @include link-colors(#fff);
-            border-left: none;
-            &:focus, &:hover {
-              text-decoration: underline;
-              background-color: none;
-            }
+           @include link-colors($darker-grey);
+           letter-spacing: .5px;
+          border-left: none;
+          &:focus, &:hover {
+//              text-decoration: underline;
+            background: none;
+          }
+          @include breakpoint($desk) {
+              @include link-colors(#fff);
+          }
+
         }
 
         &.dropdown.active > .dropdown-toggle,
@@ -60,22 +65,47 @@
         &.dropdown.open.active > .dropdown-toggle,
         &.dropdown.open.active > a:focus,
         &.dropdown.open.active > a:hover {
-          background-color: none;
-          color: #fff;
+          background: none;
+          color: $darker-grey;
+          @include breakpoint($desk) {
+            color: #fff;
+          }
         }
 
     .dropdown-menu {
-      background-color: #f6f6f6;
-      @include box-shadow(rgba(black, .25) 1px 5px 5px);
+      background-color: $lighter-grey;
       li {
       > a,
        &.dropdown.open > .dropdown-toggle,
       &.dropdown.open.active > .dropdown-toggle {
-         @include link-colors(#1a74c1);
-         border: none;
+            @include link-colors(#1a74c1);
+            border: none;
+            letter-spacing: none;
+          }
+        }
       }
     }
+  }
+  .nav-collapse{
+    background-color: $lighter-grey;
+  }
+  .nav-collapse {
+    @include box-shadow(rgba(black, .25) 1px 5px 5px);
+    @include breakpoint($desk) {
+      background-color: none;
+      box-shadow: none;
+      .dropdown-menu {
+        background-color: $lighter-grey;
+        @include box-shadow(rgba(black, .25) 1px 5px 5px);
+      }
     }
   }
-}
-}
+  .btn-navbar {
+    color: $dark-grey;
+    background-color: #f0f0f0;
+    @include background-image(linear-gradient(white, $lighter-grey));
+    &:hover {
+      color: $darker-grey;
+    }
+  }
+} // end .l-region--navigation .tb-megamenu
